# CoreVanGuard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: kernel-linux.yml  kernel-macos.yml  kernel-windows.yml  static-analysis.yml  tauri-ui.yml
agent/: Cargo.toml
agent/src/: enforcement.rs  lib.rs  linux_guard.rs  linux_provider.rs  main.rs  process_bridge.rs  vault_bridge.rs  windows_provider.rs
docs/security/: code-signing.md
kernel/: README.md
kernel/linux/: README.md
kernel/linux/bpf/: corevanguard.bpf.c
kernel/linux/user/: corevanguard_ebpf_loader.c
kernel/macos/: README.md
kernel/macos/CoreVanguardES/: Info.plist  main.mm
kernel/macos/CoreVanguardES.xcodeproj/: project.pbxproj
kernel/windows/: CoreVanguardMiniFilter.c  CoreVanguardMiniFilter.inf  CoreVanguardMiniFilter.sln  CoreVanguardMiniFilter.vcxproj  README.md
scripts/: build-linux-ebpf.sh  build-macos-es.sh  build-windows-driver.ps1
ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
ui/src/components/: DiagnosticsPanel.tsx  StatusHero.tsx  TelemetryPanel.tsx  VaultPanel.tsx
ui/src/lib/: api.ts  types.ts
ui/src/styles/: index.css
